--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ redis = { version = "0.31.0", features = ["tokio-rustls-comp", "streams", "r2d2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
+
+[dev-dependencies]
+rand = "0.9.1"
