--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,23 @@
 [package]
 name = "rdq"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 
 [dependencies]
 async-trait = "0.1.88"
 r2d2 = "0.8.10"
-redis = { version = "0.31.0", features = ["connection-manager", "tokio-rustls-comp", "streams", "r2d2"] }
+redis = { version = "0.31.0", features = [
+    "connection-manager",
+    "tokio-rustls-comp",
+    "streams",
+    "r2d2",
+] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
+uuid = { version = "1.18.0", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.9.1"
+testcontainers = "0.25.0"
+testcontainers-modules = { version = "0.13.0", features = ["redis"] }
